--- a/smoking-tracker/index.html
+++ b/smoking-tracker/index.html
@@ -25,12 +25,30 @@
 			<span class="app-name">Smoking Tracker</span>
 		</h1>
 		<h2>Smoke tracker</h2>
-		<div class="mv-bar mv-ui"></div>
+		<div class="mv-bar mv-ui"><a href="#entries" class="mv-button custom entries">Entries</a></div>
 	</header>
 
 	<main class="charts-first">
 		<a id=stats></a>
-			
+			<div class="chart-row">
+				<figure data-type="chart" class="chart appearance-stretch type-table" style="min-width: min(300px, 100vw)">
+	
+		<table>
+			<thead>
+				<tr>
+					<th hc-name="a">Month</th>
+					<th hc-name="b">Number of Smokes</th>
+				</tr>
+			</thead>
+			<tbody mv-list="chart10" mv-value="groupBy(entry.entry, readable_datetime(entry.date, 'month'))">
+				<tr mv-list-item mv-group>
+					<td>[$value]</td>
+					<td>[count($items)]</td>
+				</tr>
+			</tbody>
+		</table>
+	<figcaption>Number of Smokes per month</figcaption></figure>
+			</div>
 		<a id=entries></a>
 			<div class="field-row">
 				<button data-type="action" data-show="edit" mv-action="add(entry)">➕ Add Smoke</button>
@@ -46,6 +64,7 @@
 				<div property="notes" data-type="property" class="appearance-line type-text"></div>
 				<div class="field-row">
 					<meter-discrete property="number_of_cigarettes" data-type="property" mv-default="1" min="1" max="10" step="1" mv-edit-as="meter" icon="🚬" class="type-number bar"></meter-discrete>
+					<span data-type="expression" mv-value="number_of_cigarettes"></span>
 				</div>
 			</article>
 		</section>
